--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 application/cache/*
 !application/cache/index.html
 
+application/config.php
+application/database.php
+
 application/logs/*
 !application/logs/index.html
 
