--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 application/cache/*
 !application/cache/index.html
 
-application/config.php
-application/database.php
+application/config/config.php
+application/config/database.php
 
 application/logs/*
 !application/logs/index.html
